[package]
name = "clowder"
version = "0.2.5"
authors = ["Jonathan Anderson <jonathan.anderson@mun.ca>"]
build = "build.rs"

[build-dependencies]
vergen = "*"

[dependencies]
chrono = "*"
chrono-humanize = "*"
diesel = { version = "*", features = ["chrono"] }
diesel_codegen = { version = "*", features = ["postgres"] }
dotenv = "0.8.0"
hyper = "0.10.4"
hyper-native-tls = "0.2.2"
itertools = "0.7.2"
marksman_escape = "0.1.2"
maud = { version = "*", features = ["rocket"] }
native-tls = "0.1.1"
rand = "0.3"
rocket = "*"
rocket_codegen = "*"
rust-crypto = "^0.2"
rustc-serialize = "0.3.22"
url = "1.4.0"
