[package]
name = "clowder"
version = "0.3.0"
authors = ["Jonathan Anderson <jonathan.anderson@mun.ca>"]
license = "Apache-2.0 OR MIT"
description = "Software to manage user-reserved bare-metal netbooting machines"
documentation = "https://docs.rs/crate/clowder"
repository = "https://github.com/musec/clowder"
readme = "README.md"
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "musec/clowder" }

[build-dependencies]
vergen = "0.1.1"

[dependencies]
chrono = "0.4"
chrono-humanize = "0.0"
diesel = { version = "1.3.2", features = ["chrono", "postgres"] }
dotenv = "0.13"
hyper = "0.10.4"
hyper-native-tls = "0.3"
itertools = "0.7"
log = "0.4"
marksman_escape = "0.1.2"
maud = { version = "0.21", features = ["rocket"] }
native-tls = "0.2"
rand = "0.5"
rocket = "0.4"
rust-crypto = "0.2"
rustc-serialize = "0.3"
url = "1.7"
